cmake_minimum_required(VERSION 3.8)
project(bumperbot_cpp_examples)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(std_msgs REQUIRED)
find_package(rcl_interfaces REQUIRED)
find_package(geometry_msgs REQUIRED)
find_package(tf2_ros REQUIRED)
find_package(bumperbot_msgs REQUIRED)

add_executable(simple_publisher src/simple_publisher.cpp)
add_executable(simple_subscriber src/simple_subscriber.cpp)
add_executable(simple_parameter src/simple_parameter.cpp)
add_executable(simple_tf_kinematics src/simple_tf_kinematics.cpp)
add_executable(simple_service_server src/simple_service_server.cpp)
add_executable(simple_service_client src/simple_service_client.cpp)

ament_target_dependencies(simple_publisher rclcpp std_msgs)
ament_target_dependencies(simple_subscriber rclcpp std_msgs)
ament_target_dependencies(simple_parameter rclcpp rcl_interfaces)
ament_target_dependencies(simple_tf_kinematics rclcpp geometry_msgs tf2_ros)
ament_target_dependencies(simple_service_server rclcpp bumperbot_msgs)
ament_target_dependencies(simple_service_client rclcpp bumperbot_msgs)

install(TARGETS
  simple_publisher
  simple_subscriber
  simple_parameter
  simple_tf_kinematics
  simple_service_server
  simple_service_client
  DESTINATION lib/${PROJECT_NAME}
)


if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  set(ament_cmake_copyright_FOUND TRUE)
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()
